@@ -1,3 +1,8 @@
+Mon Feb 25 21:28:46 2002  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/syslog/syslog.c: Merge from rough.  Turn Syslog into a
+	  module keeping backward compatibility intact.
+
 Mon Feb 25 19:35:48 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
 
 	* process.c (rb_syswait): argument order of rb_waitpid() inverted.
